--- a/templates/rsyslog.conf.j2
+++ b/templates/rsyslog.conf.j2
@@ -10,21 +10,12 @@ $ModLoad imuxsock # provides support for local system logging
 $ModLoad imklog   # provides kernel logging support
 #$ModLoad immark  # provides --MARK-- message capability
 
-$WorkDirectory /etc/rsyslog.d/work
-
-$ActionResumeRetryCount -1 # infinite retries on insert failure
-
+{% if rsyslog_udp %}$ModLoad imudp
 # provides UDP syslog reception
-{% if rsyslog_udp %}$ModLoad imudp {% else %}
-{% endif %}
-
-{% if rsyslog_udp_port is defined %}$UDPServerRun {{ rsyslog_udp_port }}{% else %}
-{% endif %}
-
-# provides TCP syslog reception
+$UDPServerRun {{ rsyslog_udp_port }}{% else %}{% endif %}
 {% if rsyslog_tcp %}$ModLoad imtcp
-$InputTCPServerRun {{ rsyslog_tcp_port }}{% else %}
-{% endif %}
+# provides TCP syslog reception
+$InputTCPServerRun {{ rsyslog_tcp_port }}{% else %}{% endif %}
 
 #### GLOBAL DIRECTIVES ####
 # Use traditional timestamp format.
@@ -109,31 +100,28 @@ daemon.*;mail.*;\
 	*.=notice;*.=warn	|/dev/xconsole
 
 #### ENCRYPTION ####
-
 {% if ca_certificate %}
-
 $DefaultNetstreamDriver gtls
-
 $DefaultNetstreamDriverCAFile {{ ca_certificate_path }}
+$DefaultNetstreamDriverCertFile {{ ca_certificate_server_path }}
+$DefaultNetstreamDriverKeyFile {{ ca_certificate_server_key_path }}
 
-$ActionQueueType LinkedList
-$ActionQueueSaveOnShutdown on
-
-$ActionSendStreamDriverAuthMode anon
-$ActionSendStreamDriverMode 1 # run driver in TLS-only mode
+$ActionSendStreamDriverAuthMode {{ auth_mode }}
 #$ActionSendStreamDriverPermittedPeer {{ rsyslog_server_logging_tcp }}
+$ActionSendStreamDriverMode 1 # run driver in TLS-only mode
 
 {% else %}
 $ActionSendStreamDriverMode 0 # run driver in clear text
 {% endif %}
 
 #### REMOTE LOGGING ####
+{% if rsyslog_server_logging_udp is defined %}
 ## send logs via @udp
-{% if rsyslog_server_logging_udp is defined %}*.* @{{ rsyslog_server_logging_udp }}:{{ rsyslog_server_logging_udp_port }}{% else %}
+*.* @{{ rsyslog_server_logging_udp }}:{{ rsyslog_server_logging_udp_port }}{% else %}
 
 {% endif %}
-
+{% if rsyslog_server_logging_tcp is defined %}
 ## send logs via @@tcp
-{% if rsyslog_server_logging_tcp is defined %}*.* @@{{ rsyslog_server_logging_tcp }}:{{ rsyslog_server_logging_tcp_port }}{% else %}
+*.* @@{{ rsyslog_server_logging_tcp }}:{{ rsyslog_server_logging_tcp_port }}{% else %}
 
 {% endif %}
